<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#C3C3C3"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline9"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintGuide_percent="0.20194647" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline10"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintGuide_percent="0.7931873" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline11"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.10943913" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline12"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.25581396" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline13"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.41997263" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline14"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.5854993" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline15"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.7729138" />

   <Button
       android:id="@+id/btnPanico"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/enviar"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.498"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.499" />

   <TextView
       android:id="@+id/lbStatus"
       android:layout_width="100dp"
       android:layout_height="30dp"
       android:layout_marginStart="8dp"
       android:text="@string/emespera"
       android:textColor="@color/design_default_color_on_secondary"
       android:textSize="18sp"
       app:layout_constraintBottom_toTopOf="@+id/guideline12"
       app:layout_constraintEnd_toStartOf="@+id/guideline10"
       app:layout_constraintHorizontal_bias="0.037"
       app:layout_constraintStart_toEndOf="@+id/imageView"
       app:layout_constraintTop_toTopOf="@+id/guideline19" />

   <ImageView
       android:id="@+id/imageView"
       android:layout_width="32dp"
       android:layout_height="25dp"
       android:contentDescription="@string/icone_status"
       app:layout_constraintBottom_toTopOf="@+id/guideline12"
       app:layout_constraintStart_toStartOf="@+id/guideline9"
       app:layout_constraintTop_toTopOf="@+id/guideline19"
       app:srcCompat="@android:drawable/checkbox_off_background" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline16"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.3529412" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline18"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.30232558" />

   <TextView
       android:id="@+id/textView4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="6dp"
       android:text="@string/sem_contato"
       android:textColor="@color/design_default_color_on_secondary"
       android:visibility="invisible"
       app:layout_constraintBottom_toTopOf="@+id/guideline16"
       app:layout_constraintEnd_toStartOf="@+id/guideline10"
       app:layout_constraintStart_toEndOf="@+id/imageView3"
       app:layout_constraintTop_toTopOf="@+id/guideline18"
       app:layout_constraintVertical_bias="0.307" />

   <ImageView
       android:id="@+id/imageView3"
       android:layout_width="24dp"
       android:layout_height="wrap_content"
       android:background="#FFEB3B"
       android:contentDescription="@string/icone_erro"
       android:visibility="invisible"
       app:layout_constraintBottom_toTopOf="@+id/guideline16"
       app:layout_constraintEnd_toStartOf="@+id/textView4"
       app:layout_constraintStart_toStartOf="@+id/guideline9"
       app:layout_constraintTop_toTopOf="@+id/guideline18"
       app:srcCompat="@android:drawable/stat_notify_error" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline19"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.17920657" />

   <TextView
       android:id="@+id/txtLocalizacao"
       android:layout_width="187dp"
       android:layout_height="59dp"
       android:text="@string/GPS"
       app:layout_constraintBottom_toTopOf="@+id/guideline20"
       app:layout_constraintEnd_toStartOf="@+id/guideline10"
       app:layout_constraintStart_toStartOf="@+id/guideline9"
       app:layout_constraintTop_toTopOf="@+id/guideline15" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline20"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.878249" />

   <ProgressBar
       android:id="@+id/progressBar"
       style="?android:attr/progressBarStyle"
       android:layout_width="281dp"
       android:layout_height="361dp"
       android:visibility="gone"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.504"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.242" />

   <TextView
       android:id="@+id/lbReturn"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Return"
       tools:layout_editor_absoluteX="89dp"
       tools:layout_editor_absoluteY="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>